# fast-api-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  taskfile.yaml
src/fast_api_example/: main.py  scripts.py
tests/unit/: test_app.py
