[tool.poetry]
name = "fast-api-example"
version = "0.0.1"
description = "An example of a Hello World FastAPI in Python."
authors = ["Jamie Hargreaves <jamie.hargreabes@kainos.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115"}

[tool.poetry.dev-dependencies]
pre-commit = "^4.0"

[tool.poetry.scripts]
api-start = "fast_api_example.scripts:start"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
