[tool.poetry]
name = "fast-api-example"
version = "0.0.1"
description = "An example of a Hello World FastAPI in Python."
authors = ["Jamie Hargreaves <jamie.hargreaves@kainos.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115"}

[tool.poetry.dev-dependencies]
pre-commit = "^4.0"
pytest = "^8.3"
pytest-cov = "^6.0"

[tool.poetry.scripts]
api-start = "fast_api_example.scripts:start"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
