[tool.poetry]
name = "fast-api-example"
version = "0.0.1"
description = "An example of a Hello World FastAPI in Python."
authors = ["Jamie Hargreaves <jamie.hargreaves@kainos.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115"}

[tool.poetry.dev-dependencies]
pre-commit = "^4.0"
pytest = "^8.3"
pytest-cov = "^6.0"

[tool.poetry.scripts]
api-start = "fast_api_example.scripts:start"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # Enforces style guide rules (Pycodestyle errors).
    "F",  # Detects various errors in Python code (Pyflakes errors).
    "W",  # Enforces style guide warnings (Pycodestyle warnings).
    "A",  # Detects shadowing of Python built-in functions (Flake8-builtins).
    "PLC",  # Enforces coding conventions (Pylint convention messages).
    "PLE",  # Detects errors in Python code (Pylint error messages).
    "PLW",  # Detects potential issues in Python code (Pylint warning messages).
    "I"  # Sorts and organizes imports (Import-related rules).
]

[tool.coverage.report]
skip_empty = true  # Don't show files which have no statements.

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]  # Stops asserts in tests being flagged.

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
